[project]
name = "chat-with-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "langchain-community>=0.4.1,<0.5.0",
    "langchain>=1.1.0,<2.0.0",
    "pypdf>=6.1.1,<7.0.0",
    "langchain-groq>=1.1.0,<2.4.0",
    "transformers>=4.57.1,<5.0.0",
    "numpy>=1.26.0,<2.0.0",
    "streamlit>=1.51.0,<2.0.0",
    "torch>=2.2.0,<2.3.0",
    "torchvision>=0.17.0,<0.18.0",
    "sentence-transformers>=5.1.2,<6.0.0",
    "scipy",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.0",
    "pymupdf>=1.26.7",
]
